tests/lean/ns1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Imported 'Int'
  Assumed: foo::a
  Defined: foo::b
  Proved: foo::T
  Assumed: foo::H
  Assumed: foo::bla::a
  Assumed: foo::bla::c
  Assumed: foo::bla::d
foo::bla::a + foo::b + foo::bla::c : ℤ
foo::T : foo::a = foo::b
foo::H : foo::b ≥ foo::a
foo::a : ℕ
foo::bla::a : ℤ
ns1.lean:19:0: error: invalid 'end', not inside of a scope or namespace
